myflaskdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydflask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: myflaskc
        image: chiragnagorijain/myflaskimg
        ports:
        - containerPort: 5000
