mynodedeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydnode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: mynodec
        image: chiragnagorijain/mynodeimg:v2
        ports:
        - containerPort: 3000
