flasksvc.yml
apiVersion: v1
kind: Service
metadata:
  name: flasksvc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flaskapp
