nodesvc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodesvc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: nodeapp
