ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flasksvc
            port:
              number: 80


      - pathType: Prefix
        path: /node
        backend:
          service:
            name: nodesvc
            port:
              number: 80
